text to canvas, trying to shift x-axis with sin but not shifting

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         'js/jquery.gradienttext-0.1.min.js',
         'js/jquery.textillate.js',
         'js/jquery.lettering-0.6.1.min.js',
+        'js/three.min.js',
         'js/tween.min.js',
         'js/Sparks.js',
         'js/jquery.intro.js',
@@ -32,7 +33,8 @@
     </audio>
 </div>
 <div class="intro">
-    <canvas id="intro_canv" width="1000px" height="800px" style="position:relative; top:0; left:0;">Canvas Not supported, sorry.</canvas>
+    <canvas id="intro_canv_hidden" width="1000px" height="600px" style="display: none">Canvas Not supported, sorry.</canvas>
+    <canvas id="intro_canv" width="1000px" height="600px" style="position:relative; top:0; left:0;">Canvas Not supported, sorry.</canvas>
 </div>
 <div class="outro">
     <div id="atari">
