--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Outline 2015</title>
+    <title>Outline 2014</title>
     <meta charset="utf-8">
     <link href="less/style.less" rel="stylesheet/less" type="text/css" media="screen,projection" />
     <script src="js/less-1.4.1.min.js"></script>
@@ -17,6 +17,7 @@
         'js/jquery.lettering-0.6.1.min.js',
         'js/three.min.js',
         'js/tween.min.js',
+        'js/underscore-min.js',
         'js/Sparks.js',
         'js/jquery.intro.js',
         'js/jquery.media.js',
@@ -25,14 +26,15 @@
         'js/demo.js'
     ]);
 </script>
+<audio controls="none" style="display: none" id="audio">
+    <source src="track/track.ogg" type="audio/ogg" />
+    <source src="track/track.mp3" type="audio/mpeg" />
+    Your browser does not support the audio element.
+</audio>
 <div class="body" id="body_container">
-    <audio controls="none" style="display: none" id="audio">
-        <source src="track/track.ogg" type="audio/ogg" />
-        <source src="track/track.mp3" type="audio/mpeg" />
-        Your browser does not support the audio element.
-    </audio>
 </div>
 <div class="intro">
+    <span class="text-content"></span>
     <canvas id="intro_canv_hidden" width="1000px" height="600px" style="display: none">Canvas Not supported, sorry.</canvas>
     <canvas id="intro_canv" width="1000px" height="600px" style="position:relative; top:0; left:0;">Canvas Not supported, sorry.</canvas>
 </div>
