--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link href="less/style.less" rel="stylesheet/less" type="text/css" media="screen,projection" />
     <script src="js/less-1.4.1.min.js"></script>
     <script src="js/modernizr.custom.50055.js"></script>
-</head>
 <body>
 <script>
     Modernizr.load([
@@ -15,6 +14,12 @@
         'js/jquery.gradienttext-0.1.min.js',
         'js/jquery.textillate.js',
         'js/jquery.lettering-0.6.1.min.js',
+                'js/dancer/dancer.js',
+                'js/dancer/support.js',
+                'js/dancer/adapterWebAudio.js',
+                'js/dancer/adapterMoz.js',
+                'js/dancer/kick.js',
+                'js/dancer/fft.js',
         'js/three.min.js',
         'js/tween.min.js',
         'js/underscore-min.js',
@@ -26,9 +31,9 @@
         'js/demo.js'
     ]);
 </script>
-<audio controls="none" style="display: none" id="audio">
-    <source src="track/track.ogg" type="audio/ogg" />
-    <source src="track/track.mp3" type="audio/mpeg" />
+<audio controls="none" style="display: none" id="audio" preload="auto">
+    <source src="track/track.ogg" type='audio/ogg; codecs="vorbis"' />
+    <source src="track/track.mp3" type='audio/mpeg; codecs="mp3' />
     Your browser does not support the audio element.
 </audio>
 <div class="body" id="body_container">
