--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script>
     Modernizr.load([
         'css/animate-custom.css',
+        'js/rAF.js',
         'js/jquery-1.9.1.min.js',
         'js/jquery.gradienttext-0.1.min.js',
         'js/jquery.textillate.js',
@@ -18,6 +19,7 @@
         'js/tween.min.js',
         'js/underscore-min.js',
         'js/Sparks.js',
+        'js/jquery.ctx_effects.js',
         'js/jquery.intro.js',
         'js/jquery.media.js',
         'js/jquery.sprite.js',
