--- a/test.html
+++ b/test.html
@@ -21,6 +21,7 @@
         'js/Sparks.js',
         'js/jquery.ctx_effects.js',
 //        'js/jquery.intro.js',
+        'js/visuals/jquery.room.js',
 //        'js/jquery.media.js',
 //        'js/jquery.sprite.js',
 //        'js/jquery.outro.js',
@@ -35,10 +36,9 @@
 <!--</audio>-->
 <div class="body" id="body_container">
 </div>
-<div class="intro">
-    <span class="text-content"></span>
-    <canvas id="intro_canv_hidden" width="1000px" height="600px" style="display: none">Canvas Not supported, sorry.</canvas>
-    <canvas id="intro_canv" width="1000px" height="600px" style="position:relative; top:0; left:0;">Canvas Not supported, sorry.</canvas>
+<div class="canvas">
+    <canvas id="canv_hidden" width="1000px" height="600px" style="display: none">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv" width="1000px" height="600px" style="position:relative; top:0; left:0;">Canvas Not supported, sorry.</canvas>
 </div>
 <div class="outro">
     <div id="atari">
