--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         'js/jquery.ctx_effects.js',
         'js/jquery.intro.js',
         'js/jquery.media.js',
+        'js/jquery.room.js',
         'js/jquery.outro.js',
         'js/demo.js'
     ]);
