zoom in and out room

--- a/test.html
+++ b/test.html
@@ -34,8 +34,8 @@
     <!--Your browser does not support the audio element.-->
 <!--</audio>-->
 <div class="canvas">
-    <canvas id="canv_hidden" width="800px" height="400px" style="display: none">Canvas Not supported, sorry.</canvas>
-    <canvas id="canv" width="800px" height="400px" style="position:relative; top:0; left:0;">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv_hidden" width="600px" height="400px">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv" width="600px" height="400px">Canvas Not supported, sorry.</canvas>
 </div>
 <div class="outro">
     <div id="atari">
