integraded room logic in demo.js, triggers to change visual by time

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <source src="track/track.mp3" type='audio/mpeg; codecs="mp3' />
     Your browser does not support the audio element.
 </audio>
-<div class="body" id="body_container">
-</div>
 <div class="canvas">
-    <canvas id="canv_hidden" width="800px" height="400px" style="display: none">Canvas Not supported, sorry.</canvas>
-    <canvas id="canv" width="800px" height="400px" style="position:relative; top:0; left:0;">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv_hidden_intro" width="1000px" height="400px">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv_intro" width="1000px" height="400px">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv_hidden_room" width="600px" height="400px">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv_room" width="600px" height="400px">Canvas Not supported, sorry.</canvas>
 </div>
 <div class="outro">
     <div id="atari">
