--- a/test.html
+++ b/test.html
@@ -21,7 +21,7 @@
         'js/Sparks.js',
         'js/jquery.ctx_effects.js',
 //        'js/jquery.intro.js',
-        'js/visuals/jquery.room.js',
+        'js/jquery.room.js',
 //        'js/jquery.media.js',
 //        'js/jquery.outro.js',
 //        'js/demo.js'
