OR-ed all coordinates

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         'js/underscore-min.js',
         'js/Sparks.js',
         'js/jquery.ctx_effects.js',
+        'js/visuals/jquery.fractal_concentric.js',
+        'js/visuals/jquery.plasma.js',
+        'js/visuals/jquery.hgraph.js',
+        'js/visuals/jquery.morphin_fractal_curves.js',
         'js/jquery.intro.js',
         'js/jquery.media.js',
         'js/jquery.room.js',
