--- a/test.html
+++ b/test.html
@@ -20,6 +20,10 @@
         'js/underscore-min.js',
         'js/Sparks.js',
         'js/jquery.ctx_effects.js',
+        'js/visuals/jquery.fractal_concentric.js',
+        'js/visuals/jquery.plasma.js',
+        'js/visuals/jquery.hgraph.js',
+        'js/visuals/jquery.morphin_fractal_curves.js',
 //        'js/jquery.intro.js',
         'js/jquery.room.js',
 //        'js/jquery.media.js',
@@ -34,8 +38,10 @@
     <!--Your browser does not support the audio element.-->
 <!--</audio>-->
 <div class="canvas">
-    <canvas id="canv_hidden" width="600px" height="400px">Canvas Not supported, sorry.</canvas>
-    <canvas id="canv" width="600px" height="400px">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv_hidden_intro" width="1000px" height="400px">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv_intro" width="1000px" height="400px">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv_hidden_room" width="600px" height="400px">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv_room" width="600px" height="400px">Canvas Not supported, sorry.</canvas>
 </div>
 <div class="outro">
     <div id="atari">
