visuals working again

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     <canvas id="canv_intro" width="1000px" height="400px">Canvas Not supported, sorry.</canvas>
     <canvas id="canv_hidden_room" width="600px" height="400px">Canvas Not supported, sorry.</canvas>
     <canvas id="canv_room" width="600px" height="400px">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv_visual0" width="600px" height="400px">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv_visual1" width="600px" height="400px">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv_visual2" width="600px" height="400px">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv_visual3" width="600px" height="400px">Canvas Not supported, sorry.</canvas>
 </div>
 <div class="outro">
     <div id="atari">
