--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Outline 2014</title>
     <meta charset="utf-8">
+    <link href="css/atari.css" type="text/css" media="screen,projection" />
     <link href="less/style.less" rel="stylesheet/less" type="text/css" media="screen,projection" />
     <script src="js/less-1.4.1.min.js"></script>
     <script src="js/modernizr.custom.50055.js"></script>
@@ -37,14 +38,14 @@
     Your browser does not support the audio element.
 </audio>
 <div class="canvas">
-    <canvas id="canv_hidden_intro" width="1000px" height="400px">Canvas Not supported, sorry.</canvas>
-    <canvas id="canv_intro" width="1000px" height="400px">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv_hidden_intro" width="1000px" height="600px">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv_intro" width="1000px" height="600px">Canvas Not supported, sorry.</canvas>
     <canvas id="canv_hidden_room" width="600px" height="400px">Canvas Not supported, sorry.</canvas>
     <canvas id="canv_room" width="600px" height="400px">Canvas Not supported, sorry.</canvas>
-    <canvas id="canv_visual0" width="600px" height="400px">Canvas Not supported, sorry.</canvas>
-    <canvas id="canv_visual1" width="600px" height="400px">Canvas Not supported, sorry.</canvas>
-    <canvas id="canv_visual2" width="600px" height="400px">Canvas Not supported, sorry.</canvas>
-    <canvas id="canv_visual3" width="600px" height="400px">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv_visual0" width=1000px" height="600px">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv_visual1" width="1000px" height="600px">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv_visual2" width="1000px" height="600px">Canvas Not supported, sorry.</canvas>
+    <canvas id="canv_visual3" width="1000px" height="600px">Canvas Not supported, sorry.</canvas>
 </div>
 <div class="outro">
     <div id="atari">
@@ -84,21 +85,19 @@
         <p class="code">
             <span class="title">Code:</span>
             <span class="value">
-                <span class="content">richard (needs a handle)</span>
+                <span class="content">richard</span>
             </span>
         </p>
         <p class="music">
             <span class="title">Music:</span>
             <span class="value">
-                <span class="content">EatMe</span><br/>
-                <span class="content">http://eatme.pro/</span>
+                <span class="content">Laoudis</span>
             </span>
         </p>
         <p class="support">
             <span class="title">Moral support:</span>
             <span class="value">
                 <span class="content">maikel</span><br/>
-                <span class="content">paniq</span><br/>
                 <span class="content">my cats <3</span>
             </span>
         </p>
@@ -107,6 +106,7 @@
             <span class="value">
                 <span class="content">Brainstorm</span><br/>
                 <span class="content">Farbrausch</span><br/>
+                <span class="content">Poo-brain</span><br/>
                 <span class="content">deFEEST</span><br/>
             </span>
         </p>
