--- a/index.html
+++ b/index.html
@@ -48,38 +48,8 @@
     <canvas id="canv_visual3" width="1000px" height="600px">Canvas Not supported, sorry.</canvas>
 </div>
 <div class="outro">
-    <div id="atari">
-        <div class="monitor">
-            <div class="canvas atari">
-                <div class="screen">
-                    <div class="icon">
-                        <div class="side1 side">
-                            <div class="atari1"></div>
-                            <div class="atari2"></div>
-                            <div class="atari3"></div>
-                            <div class="atari4"></div>
-                        </div>
-                        <div class="side2 side">
-                            <div class="atari1"></div>
-                            <div class="atari2"></div>
-                            <div class="atari3"></div>
-                            <div class="atari4"></div>
-                        </div>
-                    </div>
-                    <div class="pong">
-                        <div class="score1 score"></div>
-                        <div class="score2 score"></div>
-                        <div class="player1 player"></div>
-                        <div class="player2 player"></div>
-                        <div class="ball"></div>
-                    </div>
-                    <div class="resolution canvas">
-                        <div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div> <div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div><div class="line"></div>
-                    </div>
-                    <div class="shadow"></div>
-                </div>
-            </div>
-        </div>
+    <div class="logo">
+        <img src="img/logo.png" />
     </div>
     <div class="outro-text" style="display: none">
         <p class="code">
@@ -97,6 +67,7 @@
         <p class="support">
             <span class="title">Moral support:</span>
             <span class="value">
+                <span class="content">@ermineP <3 (paintings)</span><br/>
                 <span class="content">maikel</span><br/>
                 <span class="content">my cats <3</span>
             </span>
